--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,15 +31,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  http: ^1.4.0
   logger: ^2.6.0
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
@@ -88,11 +83,11 @@ flutter:
     - family: Bogle # This is the main font family name
       fonts:
         - asset: assets/fonts/Bogle/BOGLEREGULAR.OTF # Regular weight
-        - asset: assets/fonts/Bogle/BOGLEBOLD.OTF    # Bold weight
+        - asset: assets/fonts/Bogle/BOGLEBOLD.OTF # Bold weight
           weight: 700
-        - asset: assets/fonts/Bogle/BOGLEBLACK.OTF   # Black weight (heavier than bold)
+        - asset: assets/fonts/Bogle/BOGLEBLACK.OTF # Black weight (heavier than bold)
           weight: 900 # A common weight for 'black' or 'heavy' fonts
-        - asset: assets/fonts/Bogle/BOGLEITALIC.OTF  # Regular italic style
+        - asset: assets/fonts/Bogle/BOGLEITALIC.OTF # Regular italic style
           style: italic
         - asset: assets/fonts/Bogle/BOGLEBOLDITALIC.OTF # Bold italic style
           weight: 700
