--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,10 @@ dependencies:
     sdk: flutter
   http: ^1.4.0
   logger: ^2.6.0
-
+  image_picker: ^1.0.5
+  path: ^1.9.0
+  path_provider: ^2.1.2
+  
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
