--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.7.7+1
   http: ^1.4.0
-  logger: ^2.6.0
   image_picker: ^1.0.5
+  logger: ^2.6.0
   path: ^1.9.0
   path_provider: ^2.1.2
-  
+
 dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
