--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,4 +1,3 @@
-
 name: Build Flutter APK
 
 on:
@@ -11,13 +10,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
+      - name: Accept Android Licenses
+        run: yes | flutter doctor --android-licenses
+
       - name: Install dependencies
         run: flutter pub get
+
+      - name: Clean build artifacts
+        run: flutter clean
 
       - name: Build APK
         run: flutter build apk --release
